# matrix-creator-hal

./: .drone.yml  CMakeLists.txt  README.md
.drone/: slack.tpl
cmake/: FatalWarnings.cmake
cpp/: CMakeLists.txt
cpp/driver/: CMakeLists.txt  DCM.cpp  DCM.h  audio_output.cpp  audio_output.h  beamforming.cpp  beamforming.h  bus.h  bus_direct.cpp  bus_direct.h  bus_kernel.cpp  bus_kernel.h  circular_queue.h  creator_memory_map.h  cross_correlation.cpp  cross_correlation.h  direction_of_arrival.cpp  direction_of_arrival.h  dummy_data.h  dummy_sensor.cpp  dummy_sensor.h  everloop.cpp  everloop.h  everloop_image.h  fir_coeff.h  fw_data.h  gpio_control.cpp  gpio_control.h  humidity_data.h  humidity_sensor.cpp  humidity_sensor.h  iCompass.cpp  iCompass.h  imu_data.h  imu_sensor.cpp  imu_sensor.h  matrix_driver.cpp  matrix_driver.h  matrixio_bus.cpp  matrixio_bus.h  (+21 more)
debian/: changelog  control  copyright  files  libmatrix-creator-hal-dev.install  libmatrix-creator-hal.install  libmatrixio-creator-hal.install
demos/: CMakeLists.txt  README.md  arc_demo.cpp  audio_output.cpp  audio_output_setup.cpp  band_pass_coeff.h  beamforming_demo.cpp  clear_demo.cpp  compass_calib.cpp  compass_demo.cpp  direction_of_arrival_demo.cpp  direction_of_arrival_demo_direct.cpp  everloop_demo.cpp  fir.h  firmware_info.cpp  gpio_demo.cpp  imu_demo.cpp  imu_test.cpp  ipaddress_demo.cpp  ir_demo.cpp  leds_test.cpp  mic_demo.cpp  mic_demo_direct.cpp  mic_demo_fir_direct.cpp  mic_energy.cpp  mic_energy_direct.cpp  mic_test.cpp  mic_test2.cpp  micarray_alsa_pipes.cpp  micarray_alsa_pipes_direct.cpp  micarray_pipes_direct.cpp  micarray_raw_recorder_direct.cpp  micarray_recorder.cpp  micarray_recorder_direct.cpp  pocketsphinx_demo.cpp  pwm_demo.cpp  rainbow_demo.cpp  sample_rate_example.cpp  sensors_demo.cpp  sensors_status.cpp  (+5 more)
utils/: FIR_coeff_generation.m
